--- a/index.html
+++ b/index.html
@@ -1963,7 +1963,7 @@
                 <tr class="reward-rare">    <td>$\text{S-Crit Damage} + 1\%*[1,3+\text{s_critical_from_napier}]$</td><td>   $10$</td></tr>
                 <tr class="reward-common">  <td>$e + 0.1*[5,49]$                                                </td><td> $1000$</td></tr>
                 <tr class="reward-common">  <td>$e + 0.1*[3,19]$                                                </td><td> $1000$</td></tr>
-                <tr class="reward-common">  <td>$e% + 0.1\%*[1,4]$                                              </td><td> $1000$</td></tr>
+                <tr class="reward-common">  <td>$e\% + 0.1\%*[1,4]$                                             </td><td> $1000$</td></tr>
                 <tr class="reward-common">  <td>$\text{HP} + 10000*[1,9]$                                       </td><td>$10000$</td></tr>
                 <tr class="reward-common">  <td>$\text{DEF} + 5000*[1,9]$                                       </td><td>$10000$</td></tr>
                 <tr class="reward-common">  <td>$\text{ATK} + 5000*[1,9]$                                       </td><td>$10000$</td></tr>
