Add change dates

--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,9 @@
 
       <img src="https://visitor-badge.glitch.me/badge?page_id=kloppie5.idlespiralinforepo" alt="visitor counter" /><br/>
 
-      v0.2207291428<br/>
+      Last public update: 2022/07/02 12:05<br>
+      Last test update: 2022/07/29 10:19<br>
+      Last site update: 2022/08/15 21:18<br/>
 
       <!--<input type="file" onchange="loadSave(event)" />-->
 
