Changing navbar layout

--- a/index.html
+++ b/index.html
@@ -1198,30 +1198,30 @@
       <input type="file" onchange="loadSave(event)" />
 
       <div class="navbar" style="position: relative; width: 1500px; height: 60px">
-        <div class="nav-button explainable explain_r_upgrades" style="left: 238px; width: 100px">r Upgrades</div>
-        <div class="nav-button explainable explain_p_upgrades" style="left: 546px; width: 100px">P Upgrades</div>
-        <div class="nav-button explainable explain_z_upgrades" style="left: 854px; width: 100px">z Upgrades</div>
-        <div class="nav-button explainable explain_tornado_prestiges" style="left: 1142px; width: 140px">Tornado Prestige</div>
+        <div class="marked nav-button explainable explain_r_upgrades" style="left: 0px; width: 375px">r Upgrades</div>
+        <div class="marked nav-button explainable explain_p_upgrades" style="left: 375px; width: 375px">P Upgrades</div>
+        <div class="marked nav-button explainable explain_z_upgrades" style="left: 750px; width: 375px">z Upgrades</div>
+        <div class="marked nav-button explainable explain_tornado_prestiges" style="left: 1125px; width: 375px">Tornado Prestige</div>
       </div>
       <div class="navbar" style="position: relative; width: 1500px; height: 60px">
-        <div class="nav-button explainable explain_achievements" style="left: 91px; width: 120px">Achievements</div>
-        <div class="nav-button explainable explain_store" style="left: 292px; width: 60px">Store</div>
-        <div class="nav-button explainable explain_battle_spiral" style="left: 433px; width: 60px">Battle</div>
-        <div class="nav-button-mini explainable explain_battle_upgrades" style="left: 493px; width: 80px">upgrades</div>
-        <div class="nav-button-mini explainable explain_battle_reward_candidates" style="top: 30px; left: 493px; width: 80px">rewards</div>
-        <div class="nav-button explainable explain_spiral_equations" style="left: 624px; width: 100px">Equations</div>
-        <div class="nav-button explainable explain_challenges" style="left: 785px; width: 100px">Challenges</div>
-        <div class="nav-button explainable explain_spiral_designs" style="left: 966px; width: 80px">Designs</div>
-        <div class="nav-button explainable explain_z_reactors" style="left: 1127px; width: 100px">Z Reactors</div>
-        <div class="nav-button explainable explain_theorems unavailable" style="left: 1308px; width: 80px">Theorems</div>
+        <div class="marked nav-button explainable explain_achievements" style="left: 0px; width: 187px">Achievements</div>
+        <div class="marked nav-button explainable explain_store" style="left: 187px; width: 188px">Store</div>
+        <div class="marked nav-button explainable explain_battle_spiral" style="left: 375px; width: 93px">Battle</div>
+        <div class="marked nav-button-mini explainable explain_battle_upgrades" style="left: 468px; width: 94px">upgrades</div>
+        <div class="marked nav-button-mini explainable explain_battle_reward_candidates" style="top: 30px; left: 468px; width: 94px">rewards</div>
+        <div class="marked nav-button explainable explain_spiral_equations" style="left: 562px; width: 188px">Equations</div>
+        <div class="marked nav-button explainable explain_challenges" style="left: 750px; width: 187px">Challenges</div>
+        <div class="marked nav-button explainable explain_spiral_designs" style="left: 937px; width: 188px">Designs</div>
+        <div class="marked nav-button explainable explain_z_reactors" style="left: 1125px; width: 187px">Z Reactors</div>
+        <div class="marked nav-button explainable explain_theorems unavailable" style="left: 1312px; width: 188px">Theorems</div>
       </div>
       <div class="navbar" style="position: relative; width: 1500px; height: 60px">
-        <div class="nav-button explainable explain_story" style="left: 170px; width: 60px">Story</div>
-        <div class="nav-button explainable explain_changelog" style="left: 380px; width: 80px">changelog</div>
-        <div class="nav-button explainable explain_meta_changelog" style="left: 580px; width: 120px">meta changelog</div>
-        <div class="nav-button explainable explain_bugs" style="left: 840px"><i class="fa-solid fa-bug"></i></div>
-        <div class="nav-button explainable explain_faq" style="left: 1060px">faq</div>
-        <div class="nav-button explainable explain_dev" style="left: 1280px">dev</div>
+        <div class="marked nav-button explainable explain_story" style="left: 0px; width: 250px">Story</div>
+        <div class="marked nav-button explainable explain_changelog" style="left: 250px; width: 250px">changelog</div>
+        <div class="marked nav-button explainable explain_meta_changelog" style="left: 500px; width: 250px">meta changelog</div>
+        <div class="marked nav-button explainable explain_bugs" style="left: 750px; width: 250px"><i class="fa-solid fa-bug"></i></div>
+        <div class="marked nav-button explainable explain_faq" style="left: 1000px; width: 250px">faq</div>
+        <div class="marked nav-button explainable explain_dev" style="left: 1250px; width: 250px">dev</div>
       </div>
       <div class="" style="position: absolute; width: 1500px; height: 1000px">
         <div class="" style="position: absolute; width: 420px; height: 500px">
