Missing closing tag shifting divs

--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
 
       Last public update: 2022/07/02 12:05<br>
       Last test update: 2022/07/29 10:19<br>
-      Last site update: 2022/08/23 12:55<br/>
+      Last site update: 2022/09/08 11:16<br/>
 
       <input type="file" onchange="loadSave(event)" />
 
@@ -3051,6 +3051,7 @@
                 <li style="color: green">The Rahmen design passive effect incorrectly gives an additive bonus instead of a multiplicative one.</li>
                 <li style="color: yellow">The Rare Chance diminishment has incorrect bounds at the second threshold, making the result jump.</li>
               </ul>
+            </div>
           </div>
           <div class="explanation" id="explanation_faq" style="display: none">
             <div class="title">Frequently Asked Questions</div>
