Fixed gamma issue with spiral designs

--- a/index.html
+++ b/index.html
@@ -2523,7 +2523,18 @@
             Explanation delta z
           </div>
           <div class="explanation" id="explanation_gamma" style="display: none">
-            Explanation gamma
+            <div class="title">&gamma;</div>
+            &gamma; (gamma) is one of the components of &Delta;z.<br>
+
+            <table>
+              <tr><th> Source                       </th><th> Effect                  </th></tr>
+              <tr><td> Base value                   </td><td> 0.1                     </td></tr>
+              <tr><td> z upgrade &gamma;            </td><td> + 0.1 * level           </td></tr>
+              <tr><td> Battle reward &gamma;        </td><td> + raw                   </td></tr>
+              <tr><td> Battle reward &gamma;%       </td><td> * (1 + raw)             </td></tr>
+              <tr><td> Spiral Design rahmen passive </td><td> * 1.2 if you own rahmen </td></tr>
+              <tr><td> Spiral Design rahmen active  </td><td> * 1.5 if you use rahmne </td></tr>
+            </table>
           </div>
           <div class="explanation" id="explanation_Omega" style="display: none">
             Explanation Omega
