Added Tornado Tier explanations

--- a/index.html
+++ b/index.html
@@ -63,7 +63,49 @@
         </div>
         
         <div class="expandable" id="explanation-tornado">
-            Tornado explanation
+            Your Tornado Tier is the main indication of your progress. Gaining a tier unlocks new parts of the game or give you boosts that otherwise help you progress.
+
+            <table>
+                <tr><td>T1</td><td>Challenge</td><td>Unlocks Challenges and the Basic Challenge.</td></tr>
+                <tr><td>T2</td><td>AutoOmegaPrestige</td><td>Unlocks automation for Omega prestiges.</td></tr>
+                <tr><td>T3</td><td>Challenge_drunk</td><td></td></tr>
+                <tr><td>T3</td><td>Challenge_Drain</td><td>Internally, you unlock a challenge called "Drain", but this is not yet available.</td></tr>
+                <tr><td>T4</td><td>Equation</td><td>Unlocks Spiral Equations or Equipment.</td></tr>
+                <tr><td>T5</td><td>Challenge_Flower</td><td></td></tr>
+                <tr><td>T6</td><td>AutoPrestige</td><td>Completely useless.</td></tr>
+                <tr><td>T7</td><td>Challenge_Slow</td><td></td></tr>
+                <tr><td>T8</td><td>Enemy_PI</td><td>Unlocks the fifth enemy, called PI.</td></tr>
+                <tr><td>T9</td><td>Challenge_gluttony</td><td></td></tr>
+                <tr><td>T10</td><td>Z_boolster</td><td>Unlocks Z Reactors, which provide boosts based on delta z you "put into them".</td></tr>
+                <tr><td>T11</td><td>Challenge_Exponentiation</td><td></td></tr>
+                <tr><td>T12</td><td>Enemy_Gamma</td><td>Unlocks the sixth enemy, called Gamma, which is the main source of attack speed and variables contributing to delta z.</td></tr>
+                <tr><td>T13</td><td>NewSigma</td><td>Unlocks the variable m and changes your main formula, which currently gives you a 100% boost to delta r.</td></tr>
+                <tr><td>T14</td><td>Challenge_Poor</td><td></td></tr>
+                <tr><td>T15</td><td>Challenge_noRebirth</td><td></td></tr>
+                <tr><td>T16</td><td>Enemy_Napier</td><td>Unlocks the seventh enemy, called Napier.</td></tr>
+                <tr><td>T17</td><td>critical</td><td>Gain 10% crit chance, and double crit damage.</td></tr>
+                <tr><td>T18</td><td>Challenge_sinkhole</td><td></td></tr>
+                <tr><td>T19</td><td>m</td><td>Unlocks the z upgrade to increase m.</td></tr>
+                <tr><td>T20</td><td>Challenge_sphere</td><td></td></tr>
+                <tr><td>T21</td><td>integral</td><td>Unlocks the p upgrades alpha and beta.</td></tr>
+                <tr><td>T22</td><td>new_battle_upgrade</td><td>Unlock battle upgrades 26-29.</td></tr>
+                <tr><td>T23</td><td>z_reactor_c</td><td>Unlock the Crit Rate Z Reactor.</td></tr>
+                <tr><td>T24</td><td>Challenge_Fury</td></tr>
+                <tr><td>T25</td><td>Enemy_penta</td><td>Unlock the eighth enemy, called VarMan, and the ninth enemy, called Pentangle.</td></tr>
+                <tr><td>T26</td><td>z_reactor_cx</td><td>Unlock the SCrit Rate Z Reactor.</td></tr>
+                <tr><td>T27</td><td>new_battle_upgrade_2</td><td>Unlock battle upgrades 30-42</td></tr>
+                <tr><td>T28</td><td>alhazen</td><td>Unlock Spiral Equation XIII, which gives Block.</td></tr>
+                <tr><td>T29</td><td>pascal</td><td>Unlock Spiral Equation XIV, which gives Ressurection.</td></tr>
+                <tr><td>T30</td><td>Enemy_Fibanomnom</td><td>Unlock the tenth enemy, called Fibanomnom.</td></tr>
+                <tr><td>T31</td><td>Challenge_Straight</td></tr>
+                <tr><td>T32</td><td>Theory</td><td>Unlock Theories.</td></tr>
+                <tr><td>T33</td><td>z_reactor_ex_s</td><td>Unlock the Study Progress Z Reactor.</td></tr>
+                <tr><td>T34</td><td>new_battle_upgrade_3</td><td>Unlock battle upgrades 43-51.</td></tr>
+                <tr><td>T35</td><td>z_reactor_ex_l</td><td>Unlock the Loot Progress Z Reactor.</td></tr>
+                <tr><td>T36</td><td>Enemy_SuperPi</td><td>Unlock the eleventh enemy, called Super Pi</td></tr>
+                <tr><td>T37</td><td>scrit3</td><td>Gain 3% scrit chance.</td></tr>
+                <tr><td>T38</td><td>root_challenge</td><td></td></tr>
+            </table>
         </div>
         
         <div class="expandable" id="explanation-battle">
