Hidden non-functioning tornado unlocks

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         </div>
         
         <div class="expandable" id="explanation-tornado">
-            Your Tornado Tier is the main indication of your progress. Gaining a tier unlocks new parts of the game or give you boosts that otherwise help you progress.
-
+            Your Tornado Tier is the main indication of your progress. Gaining a tier unlocks new parts of the game or give you boosts that otherwise help you progress.<br/>
+            <br/>
             <table>
                 <tr><td>T1</td><td>Challenge</td><td>Unlocks Challenges and the Basic Challenge.</td></tr>
                 <tr><td>T2</td><td>AutoOmegaPrestige</td><td>Unlocks automation for Omega prestiges.</td></tr>
                 <tr><td>T3</td><td>Challenge_drunk</td><td></td></tr>
-                <tr><td>T3</td><td>Challenge_Drain</td><td>Internally, you unlock a challenge called "Drain", but this is not yet available.</td></tr>
-                <tr><td>T4</td><td>Equation</td><td>Unlocks Spiral Equations or Equipment.</td></tr>
+                <tr class="secret"><td>T3</td><td>Challenge_Drain</td><td>Internally, you unlock a challenge called "Drain", but this is not yet available.</td></tr>
+                <tr><td>T4</td><td>Equation</td><td>Unlocks Spiral Equations.</td></tr>
                 <tr><td>T5</td><td>Challenge_Flower</td><td></td></tr>
                 <tr><td>T6</td><td>AutoPrestige</td><td>Completely useless.</td></tr>
                 <tr><td>T7</td><td>Challenge_Slow</td><td></td></tr>
@@ -83,7 +83,7 @@
                 <tr><td>T14</td><td>Challenge_Poor</td><td></td></tr>
                 <tr><td>T15</td><td>Challenge_noRebirth</td><td></td></tr>
                 <tr><td>T16</td><td>Enemy_Napier</td><td>Unlocks the seventh enemy, called Napier.</td></tr>
-                <tr><td>T17</td><td>critical</td><td>Gain 10% crit chance, and double crit damage.</td></tr>
+                <tr><td>T17</td><td>critical</td><td>Gain 10% crit chance, and +100% crit damage.</td></tr>
                 <tr><td>T18</td><td>Challenge_sinkhole</td><td></td></tr>
                 <tr><td>T19</td><td>m</td><td>Unlocks the z upgrade to increase m.</td></tr>
                 <tr><td>T20</td><td>Challenge_sphere</td><td></td></tr>
@@ -104,7 +104,7 @@
                 <tr><td>T35</td><td>z_reactor_ex_l</td><td>Unlock the Loot Progress Z Reactor.</td></tr>
                 <tr><td>T36</td><td>Enemy_SuperPi</td><td>Unlock the eleventh enemy, called Super Pi</td></tr>
                 <tr><td>T37</td><td>scrit3</td><td>Gain 3% scrit chance.</td></tr>
-                <tr><td>T38</td><td>root_challenge</td><td></td></tr>
+                <tr class="secret"><td>T38</td><td>root_challenge</td><td>Internally, you unlock a challenge called "Root", but this is not yet available.</td></tr>
             </table>
         </div>
         
