Hidden a testing reward

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <tr><td>T34</td><td>new_battle_upgrade_3</td><td>Unlock battle upgrades 43-51.</td></tr>
                 <tr><td>T35</td><td>z_reactor_ex_l</td><td>Unlock the Loot Progress Z Reactor.</td></tr>
                 <tr><td>T36</td><td>Enemy_SuperPi</td><td>Unlock the eleventh enemy, called Super Pi</td></tr>
-                <tr><td>T37</td><td>scrit3</td><td>Gain 3% scrit chance.</td></tr>
+                <tr class="testing"><td>T37</td><td>scrit3</td><td>Gain 3% scrit chance.</td></tr>
                 <tr class="secret"><td>T38</td><td>root_challenge</td><td>Internally, you unlock a challenge called "Root", but this is not yet available.</td></tr>
             </table>
         </div>
